--- a/mxtest.ipynb
+++ b/mxtest.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Efficient Frontier\n",
+    "### Efficient Frontier: Muslim Xchange Demo\n",
     "\n",
-    "Muslim Xchange Demo for Raqaba and Sharia Portfolio.\n",
+    "Implementation on Python.\n",
     "\n",
-    "Code put together Rian Dolphin."
+    "Based on Rian Dolphin's tutorial."
    ]
   },
   {
